# organic-chemistry-explorer

./: .env.production  .eslintrc.cjs  .gitignore  CI_CD_README.md  COMPREHENSIVE_IMPROVEMENTS.md  FINAL_RATING_ASSESSMENT.md  PRODUCTION_README.md  README.md  RETROSYNTHESIS_PAGE_README.md  TESTING.md  TESTING_RESULTS.md  TESTING_SOLUTION.md  demo_enhancements.py  deploy-instructions.md  deploy-to-github.bat  deploy-to-github.ps1  index.html  package-lock.json  package.json  pnpm-lock.yaml  run_enhanced_server.py  simple_server.py  test_enhanced_app.html  test_enhancements.py  test_localhost_5173.html  test_reactions.html  vite.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  enhanced-ci.yml
backend/: KB_ENDPOINTS_README.md  KB_IMPLEMENTATION_SUMMARY.md  MULTI_STEP_README.md  README.md  csv_import_example.py  example_molecules.csv  pyproject.toml  quick_demo.py  requirements.txt  retro.py  run_tests.py  start_app_server.py  start_enhanced_server.py  start_main_server.py  start_server.py  test_kb_endpoints.py  test_multi_step_demo.py  test_retro.py
backend/app/: __init__.py  cache.py  config.py  datasets.py  error_handling.py  kb.py  kb_routes.py  main.py  metrics.py  refs.py  retro.py  schemas.py  security.py  security_enhanced.py  suppliers.py  validation.py
backend/cache/: test.json
backend/data/: conditions.json  doi_cache.json  index.json  molecules.json  molecules.meta.json  molecules.parquet  references.json  stock_molecules.smi  suppliers_catalog.json
backend/data/conditions/: aldol_conditions.json  amide_conditions.json  buchwald_conditions.json  diels_alder_conditions.json  e2_conditions.json  fischer_conditions.json  reductive_amination_conditions.json  sn1_conditions.json  sn2_conditions.json  suzuki_conditions.json
backend/data/refs/: ref_acid_catalysis.json  ref_aldol_reaction.json  ref_amide_coupling.json  ref_buchwald_amination.json  ref_carbocation_stability.json  ref_cycloaddition.json  ref_diels_alder.json  ref_e2_mechanism.json  ref_enolate_chemistry.json  ref_fischer_ester.json  ref_imine_formation.json  ref_palladium_catalysis.json  ref_palladium_ligands.json  ref_reductive_amination.json  ref_sn1_mechanism.json  ref_sn2_mechanism.json  ref_solvent_effects.json  ref_suzuki_coupling.json  ref_zaitsev_rule.json
backend/data/templates/: aldol.json  amide_coupling.json  buchwald.json  diels_alder.json  e2_beta.json  e2_elimination.json  fischer_ester.json  reductive_amination.json  sn1_tertiary.json  sn2_primary.json  sn2_primary_halide.json  sn2_retro.json  suzuki.json  test_esterification.json
backend/tests/: test_performance.py  test_retro.py
cache/: test_key.json
data/: suppliers_catalog.json
scripts/: new-repo.sh  postbuild.cjs
src/: App.jsx  index.css
src/components/: AccessibilityWrapper.jsx  ArrowOverlay.jsx  AtomBadge.jsx  BondLabel.jsx  DatasetManager.jsx  ErrorBoundary.jsx  (+26 more)
(+17 files in other folders)
